# syslog2irc

./: .gitignore  .scrutinizer.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  align_readme.py  config_example.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  start-syslog2irc.py  syslog2irc.py  test_syslog2irc.py  tox.ini
src/syslog2irc/: __init__.py  announcer.py  argparser.py  cli.py  config.py  formatting.py  irc.py  main.py  network.py  processor.py  router.py  routing.py  runner.py  signals.py  syslog.py  util.py
syslog2irc/: __init__.py  announcer.py  argparser.py  irc.py  main.py  processor.py  router.py  runner.py  signals.py  syslog.py  util.py
tests/: test_argument_parser.py  test_cli.py  test_irc_bot.py  test_irc_bot_dummy.py  test_irc_channel.py  test_irc_create_bot.py  test_irc_shutdown_predicate.py  test_load_config.py  test_message_formatting.py  test_network.py  test_processor.py  test_processor_channel_enabling.py  test_processor_shutdown.py  test_routing.py  test_syslog_message_formatting.py  test_syslog_request_handler.py  test_syslog_udp_handler.py
