[metadata]
name = syslog2irc
version = attr: syslog2irc.VERSION
url = https://homework.nwsnet.de/releases/c474/#syslog2irc
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat :: Internet Relay Chat
    Topic :: Internet
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring
    Topic :: System :: Systems Administration
license = MIT
license_file = LICENSE
description = Forward syslog messages to IRC
long_description = file: README.rst, CHANGES.rst
keywords = irc, syslog
platforms = any

[options]
zip_safe = False
install_requires =
    blinker==1.4
    irc==19.0.1
    rtoml==0.6.1
    syslogmp==0.4
python_requires = >=3.7
packages = find:
package_dir = =src

[options.entry_points]
console_scripts =
    syslog2irc = syslog2irc.main:main

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
python_version = 3.7
